<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/register_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mad.splitlist.activity.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <RelativeLayout
        android:id="@+id/activity_register_group_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_register_til_full_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/til_height">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_register_et_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                android:hint="@string/hint_required_full_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_register_til_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/til_height"
            android:layout_below="@id/activity_register_til_full_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_register_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_required_email" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_register_til_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/til_height"
            android:layout_below="@id/activity_register_til_email">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_register_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_required_password" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/activity_register_tv_required"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/register_helper_top_padding"
        android:text="@string/helper_required"
        android:layout_below="@id/activity_register_group_input" />

    <Button
        android:id="@+id/activity_register_btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/register_btn_signup_top_margin"
        android:text="@string/btn_signup"
        android:background="@color/colorPrimary"
        android:layout_below="@id/activity_register_tv_required" />

</RelativeLayout>
