<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mad.splitlist.activity.AddItemActivity"
    tools:showIn="@layout/activity_add_item">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_add_item_til_item_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/til_height">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/activity_add_item_et_itemname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:hint="@string/hint_itemname" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_add_item_til_price"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/til_height"
        android:layout_below="@id/activity_add_item_til_item_name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/activity_add_item_et_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="7"
            android:maxLength="11"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:hint="@string/hint_price" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_add_item_til_quantity"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/til_height"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/activity_add_item_til_item_name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/activity_add_item_et_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="7"
            android:maxLength="4"
            android:inputType="number"
            android:hint="@string/hint_quantity"
            android:text="@string/default_quantity"/>

    </android.support.design.widget.TextInputLayout>

</RelativeLayout>
