<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mad.splitlist.activity.LoginActivity">

    <ImageView
        android:id="@+id/activity_login_iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/login_header_top_padding"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_splitlist" />

    <RelativeLayout
        android:id="@+id/activity_login_group_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_group_layout_top_padding"
        android:layout_below="@+id/activity_login_iv_logo">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_login_til_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/til_height">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_login_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_login_til_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/til_height"
            android:layout_below="@+id/activity_login_til_email">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_login_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/activity_login_group_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/login_group_button_top_padding"
        android:layout_below="@+id/activity_login_group_input">

        <Button
            android:id="@+id/activity_login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/activity_login_tv_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/btn_register"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:alpha="0.87"
            android:paddingTop="@dimen/login_tv_create_account_top_padding"
            android:layout_below="@id/activity_login_btn_login" />

    </RelativeLayout>

</RelativeLayout>
